# duneanasel

./: CMakeLists.txt  README.md
duneanasel/common/: RecoTools.h  TruthTools.h
duneanasel/fd/beam/: Selections.h
duneanasel/nd/ndlar/: Observables.h  Selections.h  numuCC.h
examples/: CMakeLists.txt
examples/cut_optimization/fd/: VDFDToySelections.ipynb
examples/cut_optimization/fd/.ipynb_checkpoints/: VDFDToySelections-checkpoint.ipynb
examples/ndlarplot/: CMakeLists.txt  NDLAr_NumuCCContained_LongestTrack.cxx  NDLAr_NumuCCContained_LongestTrack_MaCh3.cxx  NDLAr_NumuCCContained_VtxPosition.cxx
examples/sample_separation/: CMakeLists.txt  NDLAr_NumuCCContained_LongestTrack.cxx  separate_FD_samples.cxx
examples/simple_file_reading/: RDF_file_reading.ipynb  RDF_functions.h  uproot_file_reading.ipynb
examples/user_project/: CMakeLists.txt  myana.cxx
fd/atmospheric/: Selections.h
fd/beam/: Projections.h  Selections.h
macros/cut_optimization/fd/: FDFV.ipynb
