add_executable(NDLAr_NumuCCContained_LongestTrack NDLAr_NumuCCContained_LongestTrack.cxx)
target_link_libraries(NDLAr_NumuCCContained_LongestTrack duneanasel::all)


add_executable(NDLAr_NumuCCContained_VtxPosition NDLAr_NumuCCContained_VtxPosition.cxx)
target_link_libraries(NDLAr_NumuCCContained_VtxPosition duneanasel::all)

install(TARGETS
  NDLAr_NumuCCContained_LongestTrack
  NDLAr_NumuCCContained_VtxPosition
  DESTINATION bin)
